# ocaml-zxcvbn

./: .gitignore  .merlin  .travis.yml  CHANGES.md  LICENSE.md  _tags  descr  dune-project  myocamlbuild.ml  opam  zxcvbn.opam
doc/: Zxcvbn.Match.html  Zxcvbn.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Zxcvbn.Match.html  type_Zxcvbn.html
doc/zxcvbn/: index.html
doc/zxcvbn/Zxcvbn/: index.html
doc/zxcvbn/Zxcvbn/Match/: index.html
pkg/: META  pkg.ml
src/: dune  zxcvbn.ml  zxcvbn.mli  zxcvbn_stubs.c
test/: test.ml  test_memory.ml
