opam-version: "2.0"
maintainer: "Nathan Rebours <nathan@cryptosense.com>"
authors: "Nathan Rebours <nathan@cryptosense.com>"
homepage: "https://github.com/cryptosense/ocaml-zxcvbn"
bug-reports: "https://github.com/cryptosense/ocaml-zxcvbn/issues"
license: "BSD-2"
dev-repo:  "git+https://github.com/cryptosense/ocaml-zxcvbn.git"
doc: "https://cryptosense.github.io/ocaml-zxcvbn/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.4.0"}
  "ocaml" {>= "4.02.0"}
  "ounit" {with-test}
  "ppx_deriving" {>= "4.0" & < "5.0"}
]
tags: ["org:cryptosense"]
synopsis: "Bindings for the zxcvbn password strength estimation library"
description: """
This library provides functions to estimate the strength of a password.
"""
